style: always make room for scrollbar to prevent horisontal layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,3 +16,6 @@ body {
   font-family: Poppins, sans-serif;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
